--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.4",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
     "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.0.1",
