인증 관련 오류 수정, email로 비밀번호 찾기 구현

--- a/api/.env.dist
+++ b/api/.env.dist
@@ -5,7 +5,11 @@ DATABASE_HOST=
 DATABASE_USER=
 DATABASE_PASSWORD=
 DATABASE_NAME=
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-GITHUB_CALLBACK_URL=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_CALLBACK_URL=
+SENDGRID_API_KEY=
 TARGET_ORIGIN=
