--- a/api/package.json
+++ b/api/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.1.4",
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.1",
     "connect-flash": "^0.1.1",
     "cookie-session": "^1.3.1",
     "cors": "^2.8.4",
+    "crypto": "^1.0.1",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
@@ -24,6 +26,7 @@
     "jsonwebtoken": "^8.0.1",
     "knex": "^0.13.0",
     "mysql": "^2.14.1",
+    "nodemailer": "^4.1.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
