--- a/api/package.json
+++ b/api/package.json
@@ -34,6 +34,7 @@
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.0-rc.4",
+    "socket.io": "^2.0.3",
     "validator": "^8.2.0"
   }
 }
